--- a/Harden System Security/Pages/Protect.xaml
+++ b/Harden System Security/Pages/Protect.xaml
@@ -5,12 +5,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ui="using:CommunityToolkit.WinUI"
     xmlns:customUI="using:AppControlManager.CustomUIElements"
-    xmlns:others="using:AppControlManager.Others"
     xmlns:Protect="using:HardenSystemSecurity.Protect"
     xmlns:ani="using:CommunityToolkit.WinUI.Animations"
     xmlns:DI="using:HardenSystemSecurity.DeviceIntents"
     xmlns:controls="using:CommunityToolkit.WinUI.Controls"
-    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     FlowDirection="{x:Bind ViewModel.AppSettings.ApplicationGlobalFlowDirection, Mode=OneWay}">
 
     <Grid>
@@ -110,72 +108,110 @@
                 </Grid>
             </DataTemplate>
 
-            <!-- For the listview that shows security measures that will be applied based on selected device usage intents. -->
-            <DataTemplate x:Key="DeviceIntentMUnitPreviewTemplate" x:DataType="Protect:MUnit">
+            <!-- For the listview that shows security measures that will be applied based on selected device usage intent. -->
+            <DataTemplate x:Key="DeviceIntentMUnitPreviewTemplate"
+                          xmlns:VMs="using:HardenSystemSecurity.ViewModels"
+                          x:DataType="Protect:MUnit">
 
-                <Grid ColumnSpacing="12" Padding="8"
-                      Margin="0,4,0,4">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="40"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
+                <!-- Swipe left (RightItems) to delete with a gradient background -->
+                <SwipeControl BorderThickness="0">
 
-                    <!-- Name -->
-                    <TextBlock Grid.Row="0" Grid.Column="0"
-                       Text="{x:Bind Name}"
-                       ToolTipService.ToolTip="{x:Bind Name}"
-                       AutomationProperties.HelpText="{x:Bind Name}"
-                       TextWrapping="Wrap"
-                       x:Phase="1"
-                       FontSize="13"
-                       FontWeight="SemiBold"
-                       Style="{ThemeResource BodyTextBlockStyle}"
-                       Margin="0,0,0,4"/>
+                    <!-- Right (swipe-left) actions -->
+                    <SwipeControl.RightItems>
+                        <SwipeItems Mode="Execute">
+                            <SwipeItem x:Uid="DeleteRow"
+                                       BehaviorOnInvoked="Close"
+                                       Invoked="{x:Bind VMs:ViewModelProvider.ProtectVM.DeleteDeviceIntentPreviewItem_SwipeInvoked}">
+                                <SwipeItem.IconSource>
+                                    <FontIconSource Glyph="&#xE74D;" />
+                                </SwipeItem.IconSource>
+                                <SwipeItem.Background>
+                                    <LinearGradientBrush StartPoint="0,0.5" EndPoint="1,0.5">
+                                        <GradientStop Color="#c31432" Offset="0.0"/>
+                                        <GradientStop Color="#240b36" Offset="1.0"/>
+                                    </LinearGradientBrush>
+                                </SwipeItem.Background>
+                            </SwipeItem>
+                        </SwipeItems>
+                    </SwipeControl.RightItems>
 
-                    <!-- Compact SubCategory tag; constrained and ellipsized so it won't stretch horizontally -->
-                    <Border Grid.Row="1"
-                    Grid.Column="0"
-                    Visibility="{x:Bind SubCategoryVisibility, Mode=OneWay}"
-                    CornerRadius="12"
-                    Padding="8,2"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Left"
-                    Background="{ThemeResource SubtleFillColorSecondaryBrush}"
-                    BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-                    BorderThickness="1"
-                    MaxWidth="320">
-                        <TextBlock Text="{x:Bind SubCategoryName, Mode=OneWay}"
-                           FontSize="10"
-                           FontWeight="SemiBold"
-                           Foreground="{ThemeResource TextFillColorPrimaryBrush}"
-                           TextWrapping="NoWrap"
-                           TextTrimming="CharacterEllipsis"/>
-                    </Border>
+                    <!-- Context flyout for right-click -->
+                    <SwipeControl.ContextFlyout>
+                        <MenuFlyout>
+                            <!-- Delete the current preview item -->
+                            <MenuFlyoutItem x:Uid="DeleteRow"
+                                            Icon="Delete"
+                                            Tag="{x:Bind}"
+                                            Click="{x:Bind VMs:ViewModelProvider.ProtectVM.DeleteDeviceIntentPreviewItem_Click}" />
+                        </MenuFlyout>
+                    </SwipeControl.ContextFlyout>
 
-                    <!-- Link -->
-                    <customUI:LinkButtonV2 Grid.Row="1" Grid.Column="1"
-                                   LinkUrl="{x:Bind URL}"
-                                   HorizontalAlignment="Right"
-                                   VerticalAlignment="Center"
-                                   Visibility="{x:Bind URLVisibility, Mode=OneWay}"/>
-                </Grid>
+                    <!-- Setting the Grid background to Transparent so that the entire item becomes hit-testable in order to make right-click context menu flyout open on empty space too -->
+                    <Grid ColumnSpacing="12"
+                          Padding="8"
+                          Background="Transparent"
+                          Margin="0,4,0,4">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="40"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
 
+                        <!-- Name -->
+                        <TextBlock Grid.Row="0"
+                                   Grid.Column="0"
+                                   Text="{x:Bind Name}"
+                                   ToolTipService.ToolTip="{x:Bind Name}"
+                                   AutomationProperties.HelpText="{x:Bind Name}"
+                                   TextWrapping="Wrap"
+                                   x:Phase="1"
+                                   FontSize="13"
+                                   FontWeight="SemiBold"
+                                   Style="{ThemeResource BodyTextBlockStyle}"
+                                   Margin="0,0,0,4"/>
+
+                        <!-- Compact SubCategory tag; constrained and ellipsized so it won't stretch horizontally -->
+                        <Border Grid.Row="1"
+                                Grid.Column="0"
+                                Visibility="{x:Bind SubCategoryVisibility, Mode=OneWay}"
+                                CornerRadius="12"
+                                Padding="8,2"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Left"
+                                Background="{ThemeResource SubtleFillColorSecondaryBrush}"
+                                BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                                BorderThickness="1"
+                                MaxWidth="320">
+                            <TextBlock Text="{x:Bind SubCategoryName, Mode=OneWay}"
+                                       FontSize="10"
+                                       FontWeight="SemiBold"
+                                       Foreground="{ThemeResource TextFillColorPrimaryBrush}"
+                                       TextWrapping="NoWrap"
+                                       TextTrimming="CharacterEllipsis"/>
+                        </Border>
+
+                        <!-- Link -->
+                        <customUI:LinkButtonV2 Grid.Row="1" Grid.Column="1"
+                                               LinkUrl="{x:Bind URL}"
+                                               HorizontalAlignment="Right"
+                                               VerticalAlignment="Center"
+                                               Visibility="{x:Bind URLVisibility, Mode=OneWay}"/>
+                    </Grid>
+                </SwipeControl>
             </DataTemplate>
 
             <!-- ItemTemplateForIntentItems for DI:IntentItem (no fixed size so GridView can wrap/stretch) -->
             <DataTemplate x:Key="ItemTemplateForIntentItems" x:DataType="DI:IntentItem">
-                <Grid
-                    Padding="8"
-                    HorizontalAlignment="Stretch"
-                    Background="{ThemeResource ControlFillColorDefaultBrush}"
-                    BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-                    BorderThickness="1"
-                    ColumnSpacing="16"
-                    CornerRadius="{StaticResource OverlayCornerRadius}">
+                <Grid Padding="8"
+                      HorizontalAlignment="Stretch"
+                      Background="{ThemeResource ControlFillColorDefaultBrush}"
+                      BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                      BorderThickness="1"
+                      ColumnSpacing="16"
+                      CornerRadius="{StaticResource OverlayCornerRadius}">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
@@ -242,7 +278,7 @@
 
         <SelectorBar
             Grid.Row="1"
-            Margin="0,-7,0,10"            
+            Margin="0,-7,0,10"
             HorizontalAlignment="Center"
             SelectionChanged="{x:Bind ViewModel.SelectorBar_SelectionChanged}"
             Style="{StaticResource TokenViewSelectorBarStyle}">
@@ -274,13 +310,13 @@
           IsClosable="{x:Bind ViewModel.MainInfoBarIsClosable, Mode=OneWay}"/>
 
         <ScrollViewer Grid.Row="3"
+                      Visibility="{x:Bind ViewModel.IsDeviceIntentSectionVisible, Mode=OneWay}"
                       Margin="5,0,5,5">
 
             <!-- Device Intents section -->
             <Grid ui:Effects.Shadow="{StaticResource BorderShadow}"
                   CornerRadius="18"
-                  HorizontalAlignment="Center"
-                  Visibility="{x:Bind ViewModel.IsDeviceIntentSectionVisible, Mode=OneWay}">
+                  HorizontalAlignment="Center">
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -306,11 +342,10 @@
                           Margin="0,10,0,0"
                           MaxHeight="320"
                           IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}"
-                          SelectionMode="Multiple"
+                          SelectionMode="Single"
                           IsMultiSelectCheckBoxEnabled="False"
                           HorizontalAlignment="Stretch"
-                          Loaded="{x:Bind ViewModel.DeviceIntentsGridViewLoaded}"
-                          SelectionChanged="{x:Bind ViewModel.DeviceIntentsSelectionChanged}"
+                          SelectedItem="{x:Bind ViewModel.SelectedDeviceIntent, Mode=TwoWay}"
                           ItemsSource="{x:Bind ViewModel.DeviceIntents}"
                           ItemContainerStyle="{StaticResource GridViewItemStyleSpacedResponsive}"
                           ItemTemplate="{StaticResource ItemTemplateForIntentItems}">
@@ -392,6 +427,7 @@
 
                         <ListView HorizontalAlignment="Stretch"
                                   Height="400"
+                                  IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}"
                                   ScrollViewer.VerticalScrollBarVisibility="Auto"
                                   ScrollViewer.VerticalScrollMode="Auto"
                                   ItemsSource="{x:Bind ViewModel.DeviceIntentMUnitsPreview}"
