--- a/AppControl Manager/Pages/Simulation.xaml
+++ b/AppControl Manager/Pages/Simulation.xaml
@@ -100,7 +100,9 @@
 
                                     <TextBlock x:Uid="ViewSelectedFilesTextBlock" TextWrapping="WrapWholeWords" />
 
-                                    <ListBox MinWidth="400" SelectionMode="Single" ItemsSource="{x:Bind ViewModel.FilePaths, Mode=OneWay}" />
+                                    <customUI:ListBoxV2 MinWidth="400"
+                                                        SelectionMode="Single"
+                                                        ItemsSource="{x:Bind ViewModel.FilePaths, Mode=OneWay}" />
 
                                 </controls:WrapPanel>
 
@@ -133,7 +135,9 @@
 
                                     <TextBlock x:Uid="ViewSelectedFoldersTextBlock" TextWrapping="WrapWholeWords" />
 
-                                    <ListBox MinWidth="400" SelectionMode="Single" ItemsSource="{x:Bind ViewModel.FolderPaths, Mode=OneWay}" />
+                                    <customUI:ListBoxV2 MinWidth="400"
+                                                        SelectionMode="Single"
+                                                        ItemsSource="{x:Bind ViewModel.FolderPaths, Mode=OneWay}" />
 
                                 </controls:WrapPanel>
 
